# ProbabilityMarketWebsockets

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  TODO.md  config.example.toml
src/: lib.rs  main.rs
src/common/: channels.rs  errors.rs  mod.rs  speedtest.rs  traits.rs  types.rs
src/config/: loader.rs  mod.rs  types.rs
src/polymarket/: auth.rs  client.rs  messages.rs  mod.rs  rest.rs  websocket.rs
src/strategy/: fees.rs  mod.rs  size_calculator.rs  traits.rs  types.rs
tests/: polymarket_rest_integration.rs  polymarket_websocket_integration.rs
tests/common/: mod.rs
