[package]
name = "polymarket_websocket"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust application that connects to Polymarket and Kalshi websockets for real-time market data"
license = "MIT"
repository = "https://github.com/yourusername/PolymarketWebsocket"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Decimal arithmetic for financial calculations
rust_decimal = { version = "1.33", features = ["serde"] }
rust_decimal_macros = "1.33"

# Async trait support
async-trait = "0.1"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI argument parsing
clap = { version = "4.4", features = ["derive", "env"] }

# Cryptographic signing for API authentication
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
hex = "0.4"

# Database (for decision engine)
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "rust_decimal"] }

# URL handling
url = "2.5"

[dev-dependencies]
# Testing utilities
tokio-test = "0.4"
wiremock = "0.5"
mockall = "0.12"
pretty_assertions = "1.4"
test-log = { version = "0.2", features = ["trace"] }
once_cell = "1.19"
rust_decimal_macros = "1.33"

[[bin]]
name = "polymarket_websocket"
path = "src/main.rs"

[lib]
name = "polymarket_websocket"
path = "src/lib.rs"
